--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,75 +1,120 @@
 # backend/requirements.txt
-# FastAPI and ASGI server
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-gunicorn==21.2.0
+
+# Core Framework
+fastapi==0.109.2
+uvicorn[standard]==0.27.1
+gunicorn==22.0.0
 
 # Database
-SQLAlchemy==2.0.23
-alembic==1.12.1
+SQLAlchemy==2.0.27
+alembic==1.13.1
 psycopg2-binary==2.9.9
 databases[postgresql]==0.8.0
+asyncpg==0.29.0
 
 # Authentication and Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-pydantic[email]==2.4.2
-python-dotenv==1.0.0
+python-multipart==0.0.7
+pydantic[email]==2.6.1
+pydantic-settings==2.1.0
+python-dotenv==1.0.1
 pyotp==2.9.0
+argon2-cffi==23.1.0
+cryptography==42.0.2
+
+# HTTP and Networking
+httpx==0.26.0
+requests==2.31.0
+urllib3==2.2.0
+certifi==2024.2.2
+aiohttp==3.9.3
 
 # Email
-emails==0.6
-jinja2==3.1.2
+jinja2==3.1.3
 aiofiles==23.2.1
+python-magic==0.4.27
+email-validator==2.1.0.post1
 
-# VCard handling
+# Data Formats
 vobject==0.9.6.1
+orjson==3.9.15
+ujson==5.9.0
+python-magic==0.4.27
+python-snappy==0.6.1
+msgpack==1.0.7
 
-# Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
+# Testing and Quality Assurance
+pytest==8.0.0
+pytest-asyncio==0.23.5
 pytest-cov==4.1.0
-httpx==0.25.0
+pytest-xdist==3.5.0
+coverage==7.4.1
+black==24.1.1
+flake8==7.0.0
+pylint==3.0.3
+mypy==1.8.0
+bandit==1.7.7
+safety==2.3.5
 
-# Development tools
-black==23.10.1
-flake8==6.1.0
-isort==5.12.0
-mypy==1.6.1
-
-# Production
-redis==5.0.1
-celery==5.3.4
-flower==2.0.1
-prometheus-client==0.18.0
-sentry-sdk==1.32.0
-
-# Monitoring and logging
-structlog==23.2.0
-python-json-logger==2.0.7
-
-# AWS
-boto3==1.29.0
-
-# Performance
-orjson==3.9.10
-ujson==5.8.0
-
-# Development
-ipython==8.17.2
+# Development Tools
+ipython==8.21.0
 ipdb==0.13.13
 watchfiles==0.21.0
+isort==5.13.2
+
+# Production and Monitoring
+redis==5.0.1
+celery==5.3.6
+flower==2.0.1
+prometheus-client==0.19.0
+sentry-sdk==1.39.1
+structlog==24.1.0
+python-json-logger==2.0.7
+statsd==4.0.1
+newrelic==9.6.0
+
+# AWS
+boto3==1.34.34
+botocore==1.34.34
+s3transfer==0.10.0
 
 # Documentation
 mkdocs==1.5.3
-mkdocs-material==9.4.7
+mkdocs-material==9.5.3
 mdx-include==1.4.2
 
-# Dependencies with strict version requirements
-starlette==0.27.0
-typing-extensions==4.8.0
-pydantic-settings==2.0.3
+# Core Dependencies
+starlette==0.40.0
+typing-extensions==4.9.0
+click==8.1.7
+h11==0.14.0
+websockets==12.0
+pytz==2024.1
+idna==3.6
+six==1.16.0
 
-# Compression
-python-snappy==0.6.1
+# Additional Security
+bcrypt==4.1.2
+PyJWT==2.8.0
+itsdangerous==2.1.2
+python-dateutil==2.8.2
+
+# Rate Limiting and Caching
+limits==3.9.0
+cachetools==5.3.2
+asyncache==0.3.1
+aioredis==2.0.1
+
+# Dependency Management
+pip-tools==7.3.0
+pip==24.0
+setuptools==69.0.3
+wheel==0.42.0
+
+# Miscellaneous but Important
+pyOpenSSL==24.0.0
+cffi==1.16.0
+pillow==10.2.0  # For image processing
+python-mimeparse==1.6.0
+zipp==3.17.0
