--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -50,6 +50,7 @@ python-json-logger = "2.0.7"
 boto3 = "1.34.34"
 starlette = "0.40.0"
 pillow = "10.2.0"
+packaging = ">=22.0"  # Added explicit packaging dependency
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.0.0"
@@ -62,7 +63,7 @@ flake8 = "7.0.0"
 pylint = "3.0.3"
 mypy = "1.8.0"
 bandit = "1.7.7"
-safety = "2.3.5"
+pip-audit = "2.7.2"  # Replaced safety with pip-audit
 ipython = "8.21.0"
 ipdb = "0.13.13"
 watchfiles = "0.21.0"
