--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,8 +9,8 @@ on:
 
 env:
   AWS_REGION: us-west-2
-  ECR_REPOSITORY_BACKEND: 778557655318.dkr.ecr.us-east-1.amazonaws.com/secure-cms-backend
-  ECR_REPOSITORY_FRONTEND: 778557655318.dkr.ecr.us-east-1.amazonaws.com/secure-cms-frontend
+  ECR_REPOSITORY_BACKEND: secrets.ECR_REPOSITORY_BACKEND
+  ECR_REPOSITORY_FRONTEND: secrets.ECR_REPOSITORY_FRONTEND
 
 jobs:
   test:
