--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,11 +12,11 @@ python = "^3.11"
 fastapi = "0.109.2"
 uvicorn = {extras = ["standard"], version = "0.27.1"}
 gunicorn = "22.0.0"
-sqlalchemy = "2.0.27"
+sqlalchemy = "1.4.42"  # Downgraded to be compatible with databases
 alembic = "1.13.1"
 psycopg2-binary = "2.9.9"
-databases = {extras = ["postgresql"], version = "0.8.0"}
 asyncpg = "0.29.0"
+databases = {extras = ["postgresql"], version = "0.8.0"}
 python-jose = {extras = ["cryptography"], version = "3.3.0"}
 passlib = {extras = ["bcrypt"], version = "1.7.4"}
 python-multipart = "0.0.7"
@@ -50,7 +50,7 @@ python-json-logger = "2.0.7"
 boto3 = "1.34.34"
 starlette = "0.40.0"
 pillow = "10.2.0"
-packaging = ">=22.0"  # Added explicit packaging dependency
+packaging = ">=22.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.0.0"
@@ -63,7 +63,7 @@ flake8 = "7.0.0"
 pylint = "3.0.3"
 mypy = "1.8.0"
 bandit = "1.7.7"
-pip-audit = "2.7.2"  # Replaced safety with pip-audit
+pip-audit = "2.7.2"
 ipython = "8.21.0"
 ipdb = "0.13.13"
 watchfiles = "0.21.0"
