--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,10 +9,10 @@ packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "0.109.2"
+fastapi = {version = "0.109.2", extras = ["all"]}  # Let FastAPI handle Starlette version
 uvicorn = {extras = ["standard"], version = "0.27.1"}
 gunicorn = "22.0.0"
-sqlalchemy = "1.4.42"  # Downgraded to be compatible with databases
+sqlalchemy = "1.4.42"
 alembic = "1.13.1"
 psycopg2-binary = "2.9.9"
 asyncpg = "0.29.0"
@@ -48,7 +48,6 @@ sentry-sdk = "1.39.1"
 structlog = "24.1.0"
 python-json-logger = "2.0.7"
 boto3 = "1.34.34"
-starlette = "0.40.0"
 pillow = "10.2.0"
 packaging = ">=22.0"
 
