--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,11 +22,19 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
+
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libsnappy-dev pkg-config gcc g++ libpq-dev python3-dev libmagic1
+        
+    - name: Install Poetry
+      run: |
+        curl -sSL https://install.python-poetry.org | python3 -
         
     - name: Install dependencies
       run: |
         cd backend
-        pip install poetry
         poetry install
         
     - name: Run tests
