--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -96,7 +96,17 @@ check_untyped_defs = true
 asyncio_mode = "auto"
 testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
-addopts = "-v --cov=app --cov-report=term-missing"
+addopts = """
+    -v
+    --cov=app
+    --cov-report=term-missing
+    --cov-fail-under=80
+    -p no:warnings
+"""
+markers = [
+    "slow: marks tests as slow",
+    "integration: marks tests as integration tests",
+]
 
 [tool.coverage.run]
 source = ["app"]
