--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -32,6 +32,10 @@ jobs:
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
         
+    - name: Configure Poetry
+      run: |
+        poetry config virtualenvs.in-project true
+        
     - name: Install dependencies
       run: |
         cd backend
@@ -40,8 +44,11 @@ jobs:
     - name: Run tests
       run: |
         cd backend
-        poetry run pytest
-        
+        # Add the current directory to PYTHONPATH
+        PYTHONPATH=$PYTHONPATH:$(pwd) poetry run pytest
+      env:
+        PYTHONPATH: ${{ github.workspace }}/backend
+
   security-scan:
     runs-on: ubuntu-latest
     steps:
