--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = {version = "0.109.2", extras = ["all"]}  # Let FastAPI handle Starlette version
+fastapi = {version = "0.109.2", extras = ["all"]}
 uvicorn = {extras = ["standard"], version = "0.27.1"}
 gunicorn = "22.0.0"
 sqlalchemy = "1.4.42"
@@ -23,8 +23,9 @@ databases = {extras = ["postgresql"], version = "0.8.0"}
 python-jose = {extras = ["cryptography"], version = "3.3.0"}
 passlib = {extras = ["bcrypt"], version = "1.7.4"}
 python-multipart = "0.0.7"
-pydantic = {extras = ["email"], version = "2.6.1"}
-pydantic-settings = "2.1.0"
+pydantic = ">=2.6.1"
+pydantic-settings = ">=2.1.0"  # Updated version
+email-validator = "2.1.0.post1"
 python-dotenv = "1.0.1"
 pyotp = "2.9.0"
 argon2-cffi = "23.1.0"
