--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,4 +1,3 @@
-# backend/pyproject.toml
 [tool.poetry]
 name = "secure-cms"
 version = "1.0.0"
@@ -6,13 +5,13 @@ description = "A secure contact management system"
 authors = ["Secure CMS Team"]
 readme = "README.md"
 packages = [
-    { include = "app", from = "." },
-    { include = "tests", from = "." }
+    { include = "app" },
+    { include = "tests", format = "sdist" }
 ]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = {version = "0.109.2", extras = ["all"]}
+fastapi = "0.109.2"
 uvicorn = {extras = ["standard"], version = "0.27.1"}
 gunicorn = "22.0.0"
 sqlalchemy = "1.4.42"
@@ -23,9 +22,8 @@ databases = {extras = ["postgresql"], version = "0.8.0"}
 python-jose = {extras = ["cryptography"], version = "3.3.0"}
 passlib = {extras = ["bcrypt"], version = "1.7.4"}
 python-multipart = "0.0.7"
-pydantic = ">=2.6.1"
-pydantic-settings = ">=2.1.0"  # Updated version
-email-validator = "2.1.0.post1"
+pydantic = "2.6.1"
+pydantic-settings = "2.1.0"
 python-dotenv = "1.0.1"
 pyotp = "2.9.0"
 argon2-cffi = "23.1.0"
@@ -53,7 +51,6 @@ structlog = "24.1.0"
 python-json-logger = "2.0.7"
 boto3 = "1.34.34"
 pillow = "10.2.0"
-packaging = ">=22.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.0.0"
@@ -76,9 +73,16 @@ isort = "5.13.2"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+addopts = "-v --cov=app --cov-report=term-missing --cov-fail-under=80"
+pythonpath = ["."]
+
 [tool.black]
 line-length = 88
-target-version = ['py311']
+target-version = ["py311"]
 include = '\.pyi?$'
 
 [tool.isort]
@@ -96,26 +100,6 @@ warn_unused_configs = true
 disallow_untyped_defs = true
 check_untyped_defs = true
 
-[tool.pytest.ini_options]
-pythonpath = [
-    ".",
-    "app"
-]
-asyncio_mode = "auto"
-testpaths = ["tests"]
-python_files = ["test_*.py", "*_test.py"]
-addopts = """
-    -v
-    --cov=app
-    --cov-report=term-missing
-    --cov-fail-under=80
-    -p no:warnings
-"""
-markers = [
-    "slow: marks tests as slow",
-    "integration: marks tests as integration tests",
-]
-
 [tool.coverage.run]
 source = ["app"]
 omit = ["tests/*", "**/__init__.py"]
@@ -128,5 +112,5 @@ exclude_lines = [
     "raise NotImplementedError",
     "if __name__ == .__main__.:",
     "pass",
-    "raise ImportError",
+    "raise ImportError"
 ]
