--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,8 +19,9 @@ alembic = "1.13.1"
 psycopg2-binary = "2.9.9"
 asyncpg = "0.29.0"
 databases = {extras = ["postgresql"], version = "0.8.0"}
-python-jose = {extras = ["cryptography"], version = "3.3.0"}
-passlib = {extras = ["bcrypt"], version = "1.7.4"}
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}  # Changed from python-jwt
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+bcrypt = "^4.0.1"
 python-multipart = "0.0.7"
 pydantic = "2.6.1"
 pydantic-settings = "2.1.0"
