--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,18 @@
-services:
-  db:
-    image: postgres:15-alpine
-    environment:
-      POSTGRES_DB: secure_cms
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d secure_cms"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+# docker-compose.yml
+version: '3.8'
 
+services:
   backend:
     image: ${ECR_REGISTRY}/secure-cms-backend:${TAG:-latest}
-    depends_on:
-      db:
-        condition: service_healthy
     environment:
-      DATABASE_URL: postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/secure_cms
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       CORS_ORIGINS: ${CORS_ORIGINS}
       SMTP_HOST: ${SMTP_HOST}
       SMTP_PORT: ${SMTP_PORT}
       SMTP_USER: ${SMTP_USER}
       SMTP_PASSWORD: ${SMTP_PASSWORD}
+    volumes:
+      - sqlite_data:/app/data  # Mount volume for SQLite database
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
@@ -46,7 +33,12 @@ services:
     command: redis-server --requirepass ${REDIS_PASSWORD}
     volumes:
       - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
-  postgres_data:
-  redis_data:
+  sqlite_data:  # Volume for SQLite database persistence
+  redis_data:   # Volume for Redis data
