--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,6 +1,18 @@
 # backend/pytest.ini
 [pytest]
-pythonpath = .
+addopts = -v -s --cov=app --cov-report=term-missing
 testpaths = tests
 python_files = test_*.py
-addopts = -v --cov=app --cov-report=term-missing
+python_functions = test_*
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::UserWarning
+    ignore::RuntimeWarning
+markers =
+    integration: mark a test as an integration test
+    slow: mark test as slow
+asyncio_mode = strict
+env =
+    TESTING=True
+    SECRET_KEY=test_secret_key
+    DATABASE_URL=sqlite:///:memory:
