--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,13 +1,11 @@
+# backend/pyproject.toml
 [tool.poetry]
 name = "secure-cms"
 version = "1.0.0"
 description = "A secure contact management system"
 authors = ["Secure CMS Team"]
 readme = "README.md"
-packages = [
-    { include = "app" },
-    { include = "tests", format = "sdist" }
-]
+packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -19,11 +17,10 @@ alembic = "1.13.1"
 psycopg2-binary = "2.9.9"
 asyncpg = "0.29.0"
 databases = {extras = ["postgresql"], version = "0.8.0"}
-python-jose = {extras = ["cryptography"], version = "^3.3.0"}  # Changed from python-jwt
-passlib = {extras = ["bcrypt"], version = "^1.7.4"}
-bcrypt = "^4.0.1"
+python-jose = {extras = ["cryptography"], version = "3.3.0"}
+passlib = {extras = ["bcrypt"], version = "1.7.4"}
 python-multipart = "0.0.7"
-pydantic = "2.6.1"
+pydantic = {extras = ["email"], version = "2.6.1"}
 pydantic-settings = "2.1.0"
 python-dotenv = "1.0.1"
 pyotp = "2.9.0"
@@ -51,7 +48,12 @@ sentry-sdk = "1.39.1"
 structlog = "24.1.0"
 python-json-logger = "2.0.7"
 boto3 = "1.34.34"
+starlette = "0.40.0"
 pillow = "10.2.0"
+packaging = ">=22.0"
+PyJWT = "2.8.0"  # Added PyJWT dependency
+emails = "0.6"  # Added emails dependency
+python-decouple = "3.8"  # Added for config management
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.0.0"
@@ -69,6 +71,7 @@ ipython = "8.21.0"
 ipdb = "0.13.13"
 watchfiles = "0.21.0"
 isort = "5.13.2"
+pytest-env = "1.1.3"  # Added for environment variable handling in tests
 
 [build-system]
 requires = ["poetry-core"]
@@ -78,40 +81,11 @@ build-backend = "poetry.core.masonry.api"
 asyncio_mode = "auto"
 testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
-addopts = "-v --cov=app --cov-report=term-missing --cov-fail-under=80"
-pythonpath = ["."]
-
-[tool.black]
-line-length = 88
-target-version = ["py311"]
-include = '\.pyi?$'
-
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-line_length = 88
-
-[tool.mypy]
-python_version = "3.11"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-check_untyped_defs = true
-
-[tool.coverage.run]
-source = ["app"]
-omit = ["tests/*", "**/__init__.py"]
-
-[tool.coverage.report]
-exclude_lines = [
-    "pragma: no cover",
-    "def __repr__",
-    "if self.debug:",
-    "raise NotImplementedError",
-    "if __name__ == .__main__.:",
-    "pass",
-    "raise ImportError"
+addopts = "-v --cov=app --cov-report=term-missing"
+env = [
+    "TESTING=True",
+    "DATABASE_URL=postgresql://test:test@localhost:5432/test_db",
+    "SECRET_KEY=test_secret_key",
+    "ALGORITHM=HS256",
+    "ACCESS_TOKEN_EXPIRE_MINUTES=30"
 ]
