--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "app"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "0.109.2"
+starlette = "0.36.3"  # Match FastAPI's requirement
 uvicorn = {extras = ["standard"], version = "0.27.1"}
 gunicorn = "22.0.0"
 sqlalchemy = "1.4.42"
@@ -33,9 +34,7 @@ certifi = "2024.8.30"
 aiohttp = "3.9.4"
 jinja2 = "3.1.3"
 aiofiles = "23.2.1"
-python-magic = "0.4.27"
 email-validator = "2.1.0.post1"
-vobject = "0.9.6.1"
 orjson = "3.9.15"
 ujson = "5.9.0"
 python-snappy = "0.6.1"
@@ -47,13 +46,7 @@ prometheus-client = "0.19.0"
 sentry-sdk = "1.39.1"
 structlog = "24.1.0"
 python-json-logger = "2.0.7"
-boto3 = "1.34.34"
-starlette = "0.40.0"
 pillow = "10.2.0"
-packaging = ">=22.0"
-PyJWT = "2.8.0"  # Added PyJWT dependency
-emails = "0.6"  # Added emails dependency
-python-decouple = "3.8"  # Added for config management
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.0.0"
@@ -67,25 +60,9 @@ pylint = "3.0.3"
 mypy = "1.8.0"
 bandit = "1.7.7"
 pip-audit = "2.7.2"
-ipython = "8.21.0"
-ipdb = "0.13.13"
 watchfiles = "0.21.0"
 isort = "5.13.2"
-pytest-env = "1.1.3"  # Added for environment variable handling in tests
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.pytest.ini_options]
-asyncio_mode = "auto"
-testpaths = ["tests"]
-python_files = ["test_*.py", "*_test.py"]
-addopts = "-v --cov=app --cov-report=term-missing"
-env = [
-    "TESTING=True",
-    "DATABASE_URL=postgresql://test:test@localhost:5432/test_db",
-    "SECRET_KEY=test_secret_key",
-    "ALGORITHM=HS256",
-    "ACCESS_TOKEN_EXPIRE_MINUTES=30"
-]
