--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,64 +12,44 @@ env:
   ECR_REPOSITORY_BACKEND: secrets.ECR_REPOSITORY_BACKEND
   ECR_REPOSITORY_FRONTEND: secrets.ECR_REPOSITORY_FRONTEND
 
-  PYTHON_VERSION: "3.11"
-  NODE_VERSION: "18"
-
 jobs:
-  backend-test:
+  test:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./backend
     steps:
     - uses: actions/checkout@v4
     
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: ${{ env.PYTHON_VERSION }}
+        python-version: '3.11'
         cache: 'pip'
     
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y --no-install-recommends \
+          build-essential \
+          libsnappy-dev \
+          python3-dev \
+          gcc \
+          g++ \
+          curl \
+          git
+
     - name: Install Poetry
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
+        poetry config virtualenvs.create true
         poetry config virtualenvs.in-project true
     
-    - name: Cache Poetry dependencies
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/pypoetry
-        key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-poetry-
-    
     - name: Install dependencies
-      run: poetry install
-      
+      working-directory: ./backend
+      run: poetry install --no-interaction --no-root
+        
     - name: Run tests
+      working-directory: ./backend
       run: poetry run pytest
-
-  frontend-test:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-        cache-dependency-path: './frontend/package-lock.json'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Run tests
-      run: npm test
-
+        
   security-scan:
     runs-on: ubuntu-latest
     steps:
@@ -83,10 +63,10 @@ jobs:
         format: 'table'
         exit-code: '1'
         ignore-unfixed: true
-        severity: 'CRITICAL'
+        severity: 'CRITICAL,HIGH'
 
   build-and-push:
-    needs: [backend-test, frontend-test, security-scan]
+    needs: [test, security-scan]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -119,3 +99,12 @@ jobs:
         cd frontend
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY_FRONTEND:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY_FRONTEND:$IMAGE_TAG
+
+  deploy:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev'
+    steps:
+    - name: Deploy
+      run: |
+        echo "Deployment would go here - typically to ECS/EKS"
