--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,46 +1,71 @@
 # backend/Dockerfile
 FROM python:3.11-slim as python-base
 
-# Python build stage
+ENV PYTHONFAULTHANDLER=1 \
+    PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PIP_NO_CACHE_DIR=off \
+    PIP_DEFAULT_TIMEOUT=100 \
+    POETRY_VERSION=1.8.2 \
+    POETRY_HOME="/opt/poetry" \
+    POETRY_VIRTUALENVS_IN_PROJECT=true \
+    POETRY_NO_INTERACTION=1 \
+    PYSETUP_PATH="/opt/pysetup" \
+    VENV_PATH="/opt/pysetup/.venv"
+
+ENV PATH="$POETRY_HOME/bin:$VENV_PATH/bin:$PATH"
+
+# Build stage
 FROM python-base as builder-base
 
 # Install system dependencies
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-        build-essential \
-        curl \
-        git \
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    curl \
+    git \
+    libpq-dev \
+    libsnappy-dev \
+    python3-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Install poetry
-ENV POETRY_VERSION=1.8.2
-ENV POETRY_HOME=/opt/poetry
-ENV POETRY_VENV=/opt/poetry-venv
-ENV POETRY_CACHE_DIR=/opt/.cache
+RUN curl -sSL https://install.python-poetry.org | python3 -
 
-# Install poetry separated from system interpreter
-RUN python3 -m venv $POETRY_VENV \
-    && $POETRY_VENV/bin/pip install -U pip setuptools \
-    && $POETRY_VENV/bin/pip install poetry==${POETRY_VERSION}
-
-# Add `poetry` to PATH
-ENV PATH="${PATH}:${POETRY_VENV}/bin"
-
-WORKDIR /app
-
-# Copy only requirements to cache them in docker layer
+WORKDIR $PYSETUP_PATH
 COPY poetry.lock pyproject.toml ./
 
-# Configure poetry
-RUN poetry config virtualenvs.create false \
-    && poetry install --no-interaction --no-ansi --no-root --no-dev
+# Install runtime dependencies
+RUN poetry install --no-dev --no-root
 
-# Create and switch to a new user
-RUN useradd -m -u 1000 app && chown -R app:app /app
+# Development stage
+FROM builder-base as development
+ENV FASTAPI_ENV=development
+
+WORKDIR $PYSETUP_PATH
+COPY . .
+RUN poetry install
+
+CMD ["poetry", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
+# Production stage
+FROM python-base as production
+ENV FASTAPI_ENV=production
+
+# Install runtime dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libpq5 \
+    libsnappy1v5 \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY --from=builder-base $VENV_PATH $VENV_PATH
+COPY --from=builder-base $PYSETUP_PATH $PYSETUP_PATH
+
+WORKDIR $PYSETUP_PATH
+COPY . .
+
+RUN useradd -r -s /bin/false app && \
+    chown -R app:app $PYSETUP_PATH
+
 USER app
 
-# Copy application code
-COPY --chown=app:app . .
-
-# Run the application
 CMD ["gunicorn", "app.main:app", "--workers", "4", "--worker-class", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000"]
