--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,7 +10,6 @@ packages = [{include = "app"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "0.109.2"
-starlette = "0.36.3"  # Match FastAPI's requirement
 uvicorn = {extras = ["standard"], version = "0.27.1"}
 gunicorn = "22.0.0"
 sqlalchemy = "1.4.42"
@@ -34,11 +33,10 @@ certifi = "2024.8.30"
 aiohttp = "3.9.4"
 jinja2 = "3.1.3"
 aiofiles = "23.2.1"
+python-magic = "0.4.27"
 email-validator = "2.1.0.post1"
 orjson = "3.9.15"
 ujson = "5.9.0"
-python-snappy = "0.6.1"
-msgpack = "1.0.7"
 redis = "5.0.1"
 celery = "5.3.6"
 flower = "2.0.1"
@@ -46,7 +44,13 @@ prometheus-client = "0.19.0"
 sentry-sdk = "1.39.1"
 structlog = "24.1.0"
 python-json-logger = "2.0.7"
+boto3 = "1.34.34"
+starlette = "0.40.0"
 pillow = "10.2.0"
+packaging = ">=22.0"
+
+# Remove python-snappy as it's causing build issues
+# python-snappy = "0.6.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.0.0"
@@ -60,9 +64,13 @@ pylint = "3.0.3"
 mypy = "1.8.0"
 bandit = "1.7.7"
 pip-audit = "2.7.2"
+ipython = "8.21.0"
+ipdb = "0.13.13"
 watchfiles = "0.21.0"
 isort = "5.13.2"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+# Rest of the configuration remains the same...
