--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,6 @@
 # backend/.env
-# Test environment variables
-DATABASE_URL=sqlite:///./test.db
-SECRET_KEY=testkey123
-ENVIRONMENT=test
-BACKEND_CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"]
-JWT_ALGORITHM=HS256
+DATABASE_URL=postgresql://user:password@localhost:5432/secure_cms
+SECRET_KEY=your-production-secret-key
+BACKEND_CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+API_V1_STR=/api/v1
+PROJECT_NAME=Secure CMS
