--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -44,24 +44,19 @@ jobs:
         poetry config virtualenvs.create true
         poetry config virtualenvs.in-project true
     
-    - name: Cache Poetry virtualenv
-      uses: actions/cache@v4
-      id: poetry-cache
-      with:
-        path: backend/.venv
-        key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-poetry-
-    
     - name: Install dependencies
       working-directory: ./backend
-      if: steps.poetry-cache.outputs.cache-hit != 'true'
-      run: poetry install --no-interaction --no-root
-        
+      run: |
+        poetry install --no-interaction --no-root
+    
     - name: Run tests
       working-directory: ./backend
+      env:
+        TESTING: "True"
+        DATABASE_URL: "sqlite:///:memory:"
+        SECRET_KEY: "test-secret-key"
       run: poetry run pytest
-        
+
   security-scan:
     runs-on: ubuntu-latest
     steps:
