--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,8 +9,8 @@ packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "0.109.2"  # This version requires starlette >=0.36.3,<0.37.0
-starlette = "0.36.3"  # Fixed version to match FastAPI requirement
+fastapi = "0.109.2"
+starlette = "0.36.3"
 uvicorn = {extras = ["standard"], version = "0.27.1"}
 gunicorn = "22.0.0"
 sqlalchemy = "1.4.42"
@@ -18,6 +18,7 @@ alembic = "1.13.1"
 psycopg2-binary = "2.9.9"
 asyncpg = "0.29.0"
 databases = {extras = ["postgresql"], version = "0.8.0"}
+PyJWT = "2.8.0"
 python-jose = {extras = ["cryptography"], version = "3.3.0"}
 passlib = {extras = ["bcrypt"], version = "1.7.4"}
 python-multipart = "0.0.7"
@@ -48,6 +49,7 @@ python-json-logger = "2.0.7"
 boto3 = "1.34.34"
 pillow = "10.2.0"
 packaging = ">=22.0"
+bcrypt = "4.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.0.0"
@@ -65,48 +67,8 @@ ipython = "8.21.0"
 ipdb = "0.13.13"
 watchfiles = "0.21.0"
 isort = "5.13.2"
+pytest-env = "1.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.black]
-line-length = 88
-target-version = ['py311']
-include = '\.pyi?$'
-
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-line_length = 88
-
-[tool.mypy]
-python_version = "3.11"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-check_untyped_defs = true
-
-[tool.pytest.ini_options]
-asyncio_mode = "auto"
-testpaths = ["tests"]
-python_files = ["test_*.py", "*_test.py"]
-addopts = "-v --cov=app --cov-report=term-missing"
-
-[tool.coverage.run]
-source = ["app"]
-omit = ["tests/*", "**/__init__.py"]
-
-[tool.coverage.report]
-exclude_lines = [
-    "pragma: no cover",
-    "def __repr__",
-    "if self.debug:",
-    "raise NotImplementedError",
-    "if __name__ == .__main__.:",
-    "pass",
-    "raise ImportError",
-]
