--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,11 +15,8 @@ uvicorn = {extras = ["standard"], version = "0.27.1"}
 gunicorn = "22.0.0"
 sqlalchemy = "1.4.42"
 alembic = "1.13.1"
-psycopg2-binary = "2.9.9"
-asyncpg = "0.29.0"
-databases = {extras = ["postgresql"], version = "0.8.0"}
-PyJWT = "2.8.0"
 python-jose = {extras = ["cryptography"], version = "3.3.0"}
+pyjwt = "2.8.0"
 passlib = {extras = ["bcrypt"], version = "1.7.4"}
 python-multipart = "0.0.7"
 pydantic = {extras = ["email"], version = "2.6.1"}
@@ -39,7 +36,6 @@ python-magic = "0.4.27"
 email-validator = "2.1.0.post1"
 orjson = "3.9.15"
 ujson = "5.9.0"
-redis = "5.0.1"
 celery = "5.3.6"
 flower = "2.0.1"
 prometheus-client = "0.19.0"
@@ -49,7 +45,6 @@ python-json-logger = "2.0.7"
 boto3 = "1.34.34"
 pillow = "10.2.0"
 packaging = ">=22.0"
-bcrypt = "4.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.0.0"
@@ -72,3 +67,15 @@ pytest-env = "1.1.3"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+addopts = "-v --cov=app --cov-report=term-missing"
+env = [
+    "TESTING=True",
+    "DATABASE_URL=sqlite:///:memory:",
+    "SECRET_KEY=test_secret_key_for_testing",
+    "BACKEND_CORS_ORIGINS=http://localhost:3000,http://localhost:8000"
+]
