--- a/backend/tests/.env.test
+++ b/backend/tests/.env.test
@@ -1,7 +1,6 @@
 # backend/tests/.env.test
-TESTING=True
-DATABASE_URL=sqlite:///:memory:
-SECRET_KEY=test-secret-key
-BACKEND_CORS_ORIGINS=http://localhost:3000,http://localhost:8000
-API_V1_STR=/api/v1
-PROJECT_NAME=Secure CMS Test
+PROJECT_NAME="Secure CMS Test"
+SECRET_KEY="test-secret-key"
+DATABASE_URL="sqlite:///:memory:"
+BACKEND_CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"]
+TESTING=true
