--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-# backend/.env
-DATABASE_URL=postgresql://user:password@localhost:5432/secure_cms
-SECRET_KEY=your-production-secret-key
-BACKEND_CORS_ORIGINS=http://localhost:3000,http://localhost:8000
-API_V1_STR=/api/v1
-PROJECT_NAME=Secure CMS
+# backend/tests/.env.test
+PROJECT_NAME="Secure CMS Test"
+SECRET_KEY="test-secret-key"
+DATABASE_URL="sqlite:///:memory:"
+BACKEND_CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"]
+TESTING=true
